<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#595260"
    android:padding="10dp"
    tools:context=".ui.activity.SecondActivity">

    <ImageButton
        android:id="@+id/second_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_star_24" />

    <ImageView
        android:transitionName="imageTransition"
        android:id="@+id/second_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal" />



        <TextView
            android:layout_marginBottom="5dp"
            android:transitionName="titleTransition"
            android:id="@+id/second_title"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#FFD523"
            android:textSize="15sp"
            android:textStyle="bold" />


    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B2B1B9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/director"
            />

        <TextView
            android:textSize="12sp"
            android:textColor="#2C2E43"
            android:id="@+id/second_directorName"
            android:text="directorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B2B1B9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/second_score"
            android:text="score"
            android:textSize="12sp"
            android:textColor="#2C2E43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B2B1B9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/scenario" />

        <TextView
            android:id="@+id/second_scenario"
            android:text="scenario"
            android:textSize="12sp"
            android:textColor="#2C2E43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B2B1B9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/second_running_time"
            android:text="running time"
            android:textSize="12sp"
            android:textColor="#2C2E43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#B2B1B9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/release" />

        <TextView
            android:id="@+id/second_release_date"
            android:text="release date"
            android:textSize="12sp"
            android:textColor="#2C2E43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="#B2B1B9"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/second_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="description"
        android:textColor="#2C2E43"
        android:textSize="12sp" />


</LinearLayout>